src/App.scss
@import url(https://fonts.googleapis.com/css?family=Oswald:300,400);
@import url(https://fonts.googleapis.com/css?family=Open+Sans:400,700);

$bg-color:#1e2127;
$bg-color-light:#2f3135;
$text-color : #FFFFFF;

$dark-peach : #FFAE88;
$light-peach : #FFE5D9;
$highlight-peach : #FFF4EF;

html, body {
  background-color: $bg-color;
}

i {
  position: fixed;
  display: block;
  top: 50%;
  width: 4px;
  height: 10px;
  background: red;
  opacity: 0;
}

.newly-added {
  animation: flyin 0.2s ease-in forwards;
  opacity: 0;
  transform: scale(1.5);
  filter: blur(3px);
}

.slide-left {
  overflow: hidden;
	-webkit-animation: slide-left 1s ease-in-out both;
	        animation: slide-left 1s ease-in-out both;
}

@-webkit-keyframes bang {
  from {
    -webkit-transform: translate3d(0,0,0);
            transform: translate3d(0,0,0);
            opacity:1;
  }
}

@keyframes bang {
  from {
    -webkit-transform: translate3d(0,0,0);
            transform: translate3d(0,0,0);
            opacity:1;
  }
}

@-webkit-keyframes slide-left {
  0% {
    -webkit-transform: translateX(0);
            transform: translateX(0);
            max-height: 0px;
            border-width: 0px;
    
  }
  15% {
    -webkit-transform: translateX(0);
            transform: translateX(0);
            max-height: 5px;
            border-width: 5px;
    
  }
  50% {
    -webkit-transform: translateX(-300px);
            transform: translateX(-300px);
            max-height: 5px;
            border-width: 5px;
    
  }
  100% {
    -webkit-transform: translateX(-300px);
            transform: translateX(-300px);
            max-height: 100px;
            border-width: 5px;
  }
}
@keyframes slide-left {
  0% {
    -webkit-transform: translateX(0);
            transform: translateX(0);
            max-height: 0px;
            border-width: 0px;
  }
  15% {
    -webkit-transform: translateX(0);
            transform: translateX(0);
            max-height: 5px;
            border-width: 5px;
    
  }
  50% {
    -webkit-transform: translateX(-300px);
            transform: translateX(-300px);
            max-height: 5px;
            border-width: 5px;
    
  }
  100% {
    -webkit-transform: translateX(-300px);
            transform: translateX(-300px);
            max-height: 100px;
            border-width: 5px;
  }
};


.app {
  text-align: center;
}

.app-logo {
  height: 40vmin;
  pointer-events: none;
}
.responsive-flex {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  @media (max-width : 768px) {
    flex-direction: column;
  }
}
.hide-sm {
  @media (max-width : 768px) {
    display: none;
  }
}
.app-body {
  padding: 0px 20px;
  background-color: $bg-color;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: flex-start;
  font-family: 'Open sans', Arial, Helvetica, sans-serif;
  font-size: calc(10px + 2vmin);
  color: $text-color;
  .redeem-title {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    width: 50vw;
    .redeem-text {
      margin-top: 2vh;
      text-transform: uppercase;
    }
    .reset {
      max-width: 16px;
      max-height: 16px;
      margin-right: 10px;
    }
    .reset-button {
      position: fixed;
      right: 2vw;
      top: 2vh;
      display: flex;
      justify-content: center;
      align-items: center;
      cursor: pointer;
      font-size: calc(4px + 2vmin);
    }
    
    .coupon {
      max-width: 50vw;
      max-height: 40vh;
      margin-top: -15px;
    }
    .enter-code {
      outline: none;
      height: 32px;
      padding: 4px;
      width: 100px;
      border-radius: 4px;
      font-family: 'Oswald', Arial, Helvetica, sans-serif;
      text-align: center;
      text-transform: uppercase;
      border: 2px solid $bg-color;
      box-shadow : 5px 5px 9px #0e0f12,
             -5px -5px 9px #2e333c;
    }
    .submit-code {
      outline: none;
      margin-left: 20px;
      @media (max-width : 768px) {
        margin-left: 0px;
        margin-top: 10px;
      }
      height: 40px;
      padding: 4px;
      width: 100px;
      border-radius: 4px;
      font-family: 'Oswald', Arial, Helvetica, sans-serif;
      text-align: center;
      text-transform: uppercase;
      background-color: $bg-color;
      color: $light-peach;
      border: 2px solid $light-peach;
      box-shadow : 5px 5px 9px #0e0f12,
             -5px -5px 9px #2e333c;
      &:hover {
        background-color: $bg-color-light;
        color: $dark-peach;
        box-shadow: none;
      }
    }
  }
}

.coupons {
  padding: 20px;
  margin-top: 10px;
  background-color: $bg-color;
  box-shadow: inset 18px 18px 35px #0e0f12,
            inset -18px -18px 35px #2e333c;
  border-radius:10px;
  height: 25vh;
  overflow: scroll;
}

.coupon-container {
  transition: 0.5s ease-in;
  overflow: hidden;
  width: 50vw;
  max-width: 300px;
  height: 20vw;
  max-height: 100px;
  margin-bottom: 40px;
  margin-left: 300px;
  margin-right: -300px;
  &:last-child {
    margin-bottom: 0px;
  }
  display: flex;
  justify-content: center;
  align-items: center;
  border: 5px solid $dark-peach;
  background-color: $highlight-peach;
  color: $bg-color;
  text-transform: uppercase;
  border-radius: 10px;
  box-shadow:  18px 18px 35px #0e0f12,
             -18px -18px 35px #2e333c;
  .code {
    padding-bottom: 20px;
    transform: rotate(-90deg);
    border-bottom: 2px dashed $dark-peach;
    font-family: 'Oswald', Arial, Helvetica, sans-serif;
    font-size: calc(8px + 2vmin);
    width: 30vw;
    max-width: 100px;
  }
  .gift {
    width: 100%;
  }
}

